# session-manager

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  events.rs  ipc.rs  lib.rs  paths.rs  state.rs  supervisor.rs
crates/core/src/backend/: claude_code.rs  codex.rs  mod.rs
crates/core/src/os/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: keel-mockup.html  spec-addendum.md  spec.md
scripts/: install.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs  panel.rs  tray.rs
ui/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  types.ts
ui/src/components/: DangerBadge.tsx  Sidebar.tsx  StatusDot.tsx  Toasts.tsx  TopBar.tsx  Transcript.tsx
ui/src/lib/: api.ts  events.ts  router.ts  store.ts
ui/src/styles/: global.css
ui/src/views/: CreateSession.tsx  Dashboard.tsx  Onboarding.tsx  Popover.tsx  SessionDetail.tsx  Settings.tsx
