[package]
name = "session-manager-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local supervisor for AI coding-agent sessions"

[lib]
name = "session_manager_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "session-manager-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
session-manager-core = { path = "../crates/core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# Self-managed Ed25519-signed auto-updates. Pulls
# `latest.json` from the configured GitHub release URL, downloads the
# signed bundle, verifies, and replaces the .app in-place. Free — no
# Apple Developer ID required for this layer (separate from Gatekeeper).
tauri-plugin-updater = "2"
# Companion to plugin-updater — exposes `relaunch()` so the UI can restart
# the app cleanly after an update is installed.
tauri-plugin-process = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
parking_lot.workspace = true
toml.workspace = true
shellexpand.workspace = true
