[package]
name = "session-manager-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local supervisor for AI coding-agent sessions"

[lib]
name = "session_manager_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "session-manager-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
session-manager-core = { path = "../crates/core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# Self-managed Ed25519-signed auto-updates. Pulls
# `latest.json` from the configured GitHub release URL, downloads the
# signed bundle, verifies, and replaces the .app in-place. Free — no
# Apple Developer ID required for this layer (separate from Gatekeeper).
tauri-plugin-updater = "2"
# Companion to plugin-updater — exposes `relaunch()` so the UI can restart
# the app cleanly after an update is installed.
tauri-plugin-process = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
parking_lot.workspace = true
toml.workspace = true
shellexpand.workspace = true

# macOS-only: convert the tray popover window from a stock NSWindow into
# a non-activating NSPanel so clicking the tray icon shows the popover
# WITHOUT activating the app (no dock-icon bounce, no main-window steal).
# This is what every polished menu-bar app does (Raycast, 1Password mini,
# Bartender). objc2 + objc2-app-kit are already pulled in transitively by
# tauri-runtime-wry → wry → objc2-web-kit, so listing them here costs
# nothing in compile time. See src-tauri/src/tray.rs::make_popover_panel.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSPanel", "NSResponder", "NSApplication"] }
objc2-foundation = "0.3"
