[package]
name = "session-manager-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "session-manager"
path = "src/main.rs"

[dependencies]
session-manager-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
